# musicfs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  fs.rs  main.rs  media.rs  test.rs  types.rs
tests/: main.rs
