[package]
name = "musicfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
derive_more = "0.99.17"
fuser = "0.14.0"
futures = "0.3.30"
itertools = "0.12.1"
libc = "0.2.154"
log = { version = "0.4.21", features = ["max_level_debug", "std", "release_max_level_warn"] }
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"
simple-logging = "2.0.2"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "process", "io-std"] }

[dev-dependencies]
insta = "1.39.0"
testcontainers = "0.16.7"
