[package]
name = "musicfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

##########
# staple #
##########
anyhow = { version = "1.0.83", features = ["backtrace"] }
itertools = "0.12.1"
once_cell = "1.19.0"
regex = { version = "1.10.4", features = ["use_std"] }

# - serialization
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"

# - logging
log = { version = "0.4.21", features = [
    "max_level_debug",
    "std",
    "release_max_level_warn",
] }
env_logger = "0.11.3"

# - useful derives
derive_more = "0.99.17"
derive-getters = "0.4.0"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
strum_macros = "0.26.2"

# - command line arguments
clap = { version = "4.5.4", features = ["derive", "wrap_help", "unicode"] }


############
# backbone #
############

# - FUSE Rust impl
fuser = "0.14.0"
libc = "0.2.153"
# - media file reading
symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
symphonia-metadata = "0.5.4"
# - directory traversal
walkdir = "2"

# - async
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
    "io-std",
] }
futures = "0.3.30"
vecdeque-stableix = "1.1.1"

[dev-dependencies]
assert2 = "0.3.14"

# snapshot tests
insta = "1.39.0"

# test inside containers
testcontainers = "0.16.7"
